# matrix-ai-cli

./: README.md  pyproject.toml  requirements.txt
bank_data/: customers.csv  metadata.json  transactions.csv
customer/: customers.csv  metadata.json
matrix_ai/: cli.py
matrix_ai/core/: ai.py  google_auth.py  notifications.py
matrix_ai_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
